# Takomo

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  NOTICE  README.md  litestream.yml  render.yaml  rustfmt.toml  stack.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.handrail/: clippy.gate.yaml  config.json  fmt.gate.yaml  openapi-current.gate.yaml  openapi-current.sh  route-test-pairing.gate.yaml  route-test-pairing.sh
.handrail/adapters/: brief.sh  check.sh  delta.sh
clients/claude-skill/takomo/: SKILL.md
clients/claude-skill/takomo-onboard/: SKILL.md
clients/cli/: README.md  install.sh  takomo
clients/mcp/: README.md  package-lock.json  package.json
clients/mcp/src/: client.ts  fences.ts  index.ts  workflow.ts
clients/mcp/test/: e2e.mjs
deploy/: docker-entrypoint.sh
docs/: ask-a-human.md  development.md  hosting.md
docs/design/: 00-synthesis.md  01-beans.md  02-agent-native-trackers.md  03-hosted-trackers.md  04-beads-server-mode.md  05-build-architecture.md  06-factory-vision.md  10-dx-gaps.md
plugins/takomo/: .mcp.json  README.md
plugins/takomo/.claude-plugin/: plugin.json
plugins/takomo/skills/takomo/: SKILL.md
prompts/: spec-agent.md
spec/: auth.md  openapi.yaml  workflow-format.md
src/: auth.rs  board.html  error.rs  ids.rs  inbox.html  lib.rs  main.rs  mcp.rs  notify.rs  server.rs  workflow.rs
src/api/: claims.rs  events.rs  export.rs  metrics.rs  mod.rs  projects.rs  questions.rs  shares.rs  tickets.rs  tokens.rs  transition.rs
src/store/: answer_grants.rs  claims.rs  events.rs  helpers.rs  metrics.rs  mod.rs  model.rs  projects.rs  questions.rs  roadmap.rs  shares.rs  tickets.rs  tokens.rs  transition.rs
tests/: api.rs  mcp.rs
workflows/: simple.yaml
