[package]
name = "takomo"
version = "0.2.0"
edition = "2021"
description = "Central task store for AI agent fleets: tickets, enforced workflows, atomic claims/leases, append-only event log"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
# Official Rust MCP SDK. Hosts the streamable-HTTP MCP server transport in-process
# so agents can `claude mcp add --transport http .../mcp` instead of running the
# Node stdio wrapper. Tool input schemas use rmcp's re-exported `schemars`.
rmcp = { version = "2.2", features = ["server", "macros", "transport-streamable-http-server"] }
# Outbound notifications for the "ask a human" board. Both are OFF unless the
# operator configures TAKOMO_NOTIFY (see src/notify.rs), keeping the default
# deploy secret-free. reqwest drives the Slack/generic-webhook transports;
# lettre drives the SMTP email transport. rustls everywhere — no system OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "tokio1", "hostname"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
futures = "0.3"
tempfile = "3"
# Also a normal dependency; declared here so integration tests can build a
# pre-migration (old-schema) database by hand to prove the additive migration.
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
lto = true
